<?xml version="1.0"?>
<package format="2">
  <name>pure_pursuit_controller</name>
  <version>0.0.0</version>
  <description>The pure_pursuit_controller package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>tf</depend>

</package>